linux-source-5.9.1 (5.9.1-4) stable; urgency=critical

  * esther.config: CPUFREQ-->e_powersaver

 -- ach <adrian.chomicki@gmail.com>  Sat, 06 Feb 2021 02:42:25 +0100

linux-source-5.9.1 (5.9.1-3) stable; urgency=critical

  * viafb: viafb_accel = 0, ++debug
  * esther.config: CRYPTO|FB_VIA|IPV6|HIGHMEM=4G

 -- ach <adrian.chomicki@gmail.com>  Fri, 05 Feb 2021 03:08:48 +0100

linux-source-5.9.1 (5.9.1-2) unstable; urgency=low

  * esther.config

 -- ach <adrian.chomicki@gmail.com>  Sat, 30 Jan 2021 14:01:19 +0100

linux-source-5.9.1 (5.9.1-1) unstable; urgency=low

  * This is a dummy changelog for packages generated by kernel-package. At
    some point, there shall be hooks for the user to substitute a
    changelog entry, but currently this is just a stub.

 -- Manoj Srivastava <srivasta@debian.org>  Sat, 19 Aug 2006 16:37:36 -0500


Local variables:
mode: debian-changelog
End: